# chessProject

./: CMakeCache.txt  CMakeLists.txt  ChessProject  Makefile  README.md  cmake_install.cmake  thirdstep
Release/linux/: ChessProject
cppFiles/: Bishop.cpp  Board.cpp  King.cpp  Knight.cpp  Pawn.cpp  PiecesClass.cpp  Queen.cpp  Rook.cpp  helperFunc.cpp  main.cpp
headers/: Action.h  Bishop.h  Board.h  King.h  Knight.h  Move.h  Pawn.h  PieceClass.h  Position.h  Queen.h  Rook.h  helperFunc.h  main.h
